# GrandHotel

./: README.md  pyproject.toml
grand_hotel_mgmt/: hooks.py  modules.txt
grand_hotel_mgmt/custom_hotel/custom/: hotel_room.json  hotel_room_reservation.json
grand_hotel_mgmt/custom_restaurant/custom/: restaurant_reservation.json
grand_hotel_mgmt/doc_events/: sales_invoice.py
grand_hotel_mgmt/grand_hotel/doctype/consolidate_invoices/: consolidate_invoices.json  consolidate_invoices.py
grand_hotel_mgmt/grand_hotel/doctype/consolidated_invoices/: consolidated_invoices.js  consolidated_invoices.json  consolidated_invoices.py  test_consolidated_invoices.py
grand_hotel_mgmt/grand_hotel/doctype/room_reservation/: room_reservation.js  room_reservation.json  room_reservation.py  test_room_reservation.py
grand_hotel_mgmt/grand_hotel/doctype/room_reservation_entries/: room_reservation_entries.json  room_reservation_entries.py
grand_hotel_mgmt/grand_hotel/doctype/services/: services.json  services.py
grand_hotel_mgmt/grand_hotel/doctype/spa_management/: spa_management.js  spa_management.json  spa_management.py  test_spa_management.py
